# AgendaFlow

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TECHNICAL_REPORT.md  docker-compose.yml  docker-entrypoint.sh  inspect_data.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-publish.yml  ci.yml
api/: __init__.py  config.py  main.py  models.py
configs/: config.yaml
docs/: API.md  ARCHITECTURE.md  AgendaFlow.postman_collection.json  USER_GUIDE.md  openapi.json
evaluation/: README.md  evaluate.py  qa.jsonl  results.json
rag/: __init__.py
rag/index/: embeddings.py  faiss_index.py
rag/ingest/: cleaning.py  deduplication.py  loader.py  openagenda_client.py  schema.py
rag/pipeline/: generator.py  query_processor.py  rag_pipeline.py  retriever.py
scripts/: build_index.py  example_queries.py  export_openapi.py  generate_qa_dataset.py  quickstart.py
tests/: __init__.py
tests/unit/: test_cleaning.py  test_deduplication.py  test_query_processor.py  test_rag_components.py
