[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agendaflow"
version = "0.1.0"
description = "RAG service for Paris event queries using OpenAgenda data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AgendaFlow Team"}
]
keywords = ["rag", "events", "paris", "openagenda", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0,<0.105.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "pydantic>=2.4.0,<2.5.0",
    "pydantic-settings>=2.0.0,<2.1.0",
    "python-dotenv>=1.0.0,<1.1.0",
    "langchain>=0.1.0,<0.2.0",
    "langchain-community>=0.0.20,<0.1.0",
    "langchain-mistralai>=0.0.5,<0.1.0",
    "mistralai>=0.1.0,<0.2.0",
    "faiss-cpu>=1.7.4,<1.8.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "transformers>=4.35.0,<5.0.0",
    "torch>=2.1.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.1.0,<2.2.0",
    "pyarrow>=14.0.0,<15.0.0",
    "requests>=2.31.0,<2.32.0",
    "httpx>=0.25.0,<0.26.0",
    "dateparser>=1.2.0,<1.3.0",
    "langdetect>=1.0.9,<1.1.0",
    "ragas>=0.1.0,<0.2.0",
    "prometheus-client>=0.19.0,<0.20.0",
    "python-json-logger>=2.0.7,<2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.11.0,<24.0.0",
    "ruff>=0.1.0,<0.2.0",
]

[tool.setuptools]
packages = ["api", "rag", "scripts"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
